@@ -1,3 +1,7 @@
+## Edge
+
+* Add SCP backup strategy.
+
 ## 0.4.4 - 2023-06-30
 
 * Remove `default_executable` line and simplify executables definition.
